Fix content on mobile login form and menus

--- a/src/components/header/Header.module.scss
+++ b/src/components/header/Header.module.scss
@@ -260,3 +260,7 @@
 :global(.toaster) {
   z-index: 10001 !important;
 }
+
+.contentWrapper {
+  padding-top: 70px;
+}
